fix: dark mode scrollbar track

--- a/assets/css/compiled/main.css
+++ b/assets/css/compiled/main.css
@@ -4809,7 +4809,7 @@ pre {
       --scrollbar-thumb: var(--clr-neutral-600);
     }
     &:where(.dark, .dark *) {
-      --scrollbar-track: var(--clr-neutral-800);
+      --scrollbar-track: var(--clr-neutral-900);
     }
   }
 }
